--- a/package.json
+++ b/package.json
@@ -24,6 +24,6 @@
 		"fluent-ffmpeg": "^2.1.2",
 		"music-metadata": "^7.8.1",
 		"path": "^0.12.7",
-		"sharp": "^0.27.2"
+		"sharp": "0.27.2"
 	}
 }
